[gd_scene load_steps=22 format=2]

[ext_resource path="res://img/baseEnemy.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/enemyBars.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/enemies/spinEnemy.gd" type="Script" id=3]
[ext_resource path="res://fonts/liberation-fonts-ttf-2.00.1/LiberationMono-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/enemies/reloadTimer.gd" type="Script" id=6]
[ext_resource path="res://img/healing.png" type="Texture" id=7]
[ext_resource path="res://img/sword.png" type="Texture" id=8]
[ext_resource path="res://img/rangedAttack.png" type="Texture" id=9]
[ext_resource path="res://img/magicAttack.png" type="Texture" id=10]
[ext_resource path="res://img/Sshield.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 24 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=4]
radius = 14.5774

[sub_resource type="Animation" id=5]
resource_name = "regenerated"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("spinEnemyBorder/spinEnemyBody:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.611765, 0.0588235, 0.0588235, 1 ), Color( 0.203922, 0.580392, 0.886275, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "shieldLess"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("enemyBars:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.129412, 0.580392, 0.780392, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("spinEnemyBorder/spinEnemyBody:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.203922, 0.580392, 0.886275, 1 ), Color( 0.611765, 0.0588235, 0.0588235, 1 ) ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 352.24

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 10 )

[node name="spinEnemy" type="KinematicBody2D" groups=[
"Enemies",
]]
self_modulate = Color( 0.388235, 0.541176, 0.937255, 1 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( -36, -36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 36, 36 )
shape = SubResource( 2 )

[node name="spinEnemyBorder" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="spinEnemyBody" type="Sprite" parent="spinEnemyBorder"]
self_modulate = Color( 0.611765, 0.0588235, 0.0588235, 1 )
position = Vector2( 1.43051e-06, 7.15256e-07 )
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -24, -24 )

[node name="enemyBars" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.129412, 0.580392, 0.780392, 1 )
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0

[node name="magicAttack" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 1.90735e-06 )
scale = Vector2( 0.227499, 0.225 )
texture = ExtResource( 10 )

[node name="rangedAttack" type="Sprite" parent="."]
visible = false
position = Vector2( -1, 2 )
scale = Vector2( 0.18, 0.175 )
texture = ExtResource( 9 )

[node name="meleeAttack" type="Sprite" parent="."]
position = Vector2( 0.999999, -2 )
rotation = 0.785398
scale = Vector2( 0.066018, 0.0546014 )
texture = ExtResource( 8 )

[node name="activeWeapon" type="Label" parent="."]
visible = false
margin_left = -10.0
margin_top = -16.0
margin_right = 11.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
text = "C
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemyCenterPos" type="Position2D" parent="."]

[node name="spike" type="Position2D" parent="enemyCenterPos"]

[node name="enemyWeapon" type="Sprite" parent="enemyCenterPos/spike"]
position = Vector2( 1.90735e-06, -73.2303 )
rotation = 3.14159
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 11 )
normal_map = ExtResource( 11 )

[node name="shieldHitBox" type="Area2D" parent="enemyCenterPos/spike/enemyWeapon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyCenterPos/spike/enemyWeapon/shieldHitBox"]
position = Vector2( -0.189451, -0.327553 )
shape = SubResource( 4 )

[node name="spike2" type="Position2D" parent="enemyCenterPos"]
rotation = 2.0944

[node name="enemyWeapon" type="Sprite" parent="enemyCenterPos/spike2"]
position = Vector2( 8.97684, -77.3864 )
rotation = -3.05433
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 11 )
normal_map = ExtResource( 11 )

[node name="shieldHitBox" type="Area2D" parent="enemyCenterPos/spike2/enemyWeapon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyCenterPos/spike2/enemyWeapon/shieldHitBox"]
position = Vector2( -0.189451, -0.327553 )
shape = SubResource( 4 )

[node name="spike3" type="Position2D" parent="enemyCenterPos"]
rotation = 4.18879

[node name="enemyWeapon" type="Sprite" parent="enemyCenterPos/spike3"]
position = Vector2( 2.5204, -76.3654 )
rotation = -3.05433
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 11 )
normal_map = ExtResource( 11 )

[node name="shieldHitBox" type="Area2D" parent="enemyCenterPos/spike3/enemyWeapon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyCenterPos/spike3/enemyWeapon/shieldHitBox"]
position = Vector2( 0.562304, -1.20576 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/regenerated = SubResource( 5 )
anims/shieldLess = SubResource( 6 )
anims/weakened = SubResource( 7 )

[node name="reloadTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true
script = ExtResource( 6 )

[node name="processEAP" type="Timer" parent="."]
autostart = true

[node name="centerPosition" type="Position2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="regenerationDetector" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="healingActivated" type="Particles2D" parent="."]
position = Vector2( -1, -1 )
emitting = false
amount = 5
process_material = SubResource( 11 )
texture = ExtResource( 7 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="reloadTimer" to="." method="_on_reloadTimer_timeout"]
[connection signal="timeout" from="processEAP" to="." method="_on_processEAP_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
